<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/screen"
        android:gravity="center_horizontal"/>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerViewSeat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:scrollingCache="true"
    android:layout_marginHorizontal="50dp"
    android:layout_marginBottom="?android:attr/actionBarSize"
    tools:context=".fragments.MovieFragment">
</androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="50dp"
        android:text="@string/buy_tickets"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp">

        <ImageView
            android:id="@+id/available_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/blue"/>

            <TextView
                android:id="@+id/available_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp">
        <ImageView
            android:id="@+id/selected_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/red"/>

            <TextView
                android:id="@+id/selected_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp">

        <ImageView
            android:id="@+id/unavailable_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/green"/>

            <TextView
                android:id="@+id/unavailable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>