<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/item_background">

        <ImageView
            android:id="@+id/theater"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theater"
            android:textSize="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:background="@color/item_background">

        <ImageView
            android:id="@+id/movie"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie"
            android:textSize="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/item_background">

        <ImageView
            android:id="@+id/ticket"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:textSize="25dp"/>

    </LinearLayout>

</LinearLayout>